CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT			( artikio-api C )

ADD_SUBDIRECTORY ( base )
ADD_SUBDIRECTORY ( bluetooth )
ADD_SUBDIRECTORY ( connectivity )
ADD_SUBDIRECTORY ( media )
ADD_SUBDIRECTORY ( systemio )
ADD_SUBDIRECTORY ( sensor )
ADD_SUBDIRECTORY ( wifi )
ADD_SUBDIRECTORY ( zigbee )
ADD_SUBDIRECTORY ( lwm2m )
ADD_SUBDIRECTORY ( mqtt )
