CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( adc-test )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_ADC_TEST adc-test )

SET ( SRC_TEST_ADC	artik_adc_test.c
    )

ADD_EXECUTABLE		( ${EXE_ADC_TEST} ${SRC_TEST_ADC} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_ADC_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
			     				PUBLIC ${ARTIK_SYSTEMIO_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES	( ${EXE_ADC_TEST}
						  ${ARTIK_BASE_LIBRARIES}
						  ${ARTIK_SYSTEMIO_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_ADC_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
