CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( cloud-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikConnectivity )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_CLOUD_TEST cloud-test )

SET ( SRC_TEST_CLOUD	artik_cloud_test.c
    )

ADD_EXECUTABLE		( ${EXE_CLOUD_TEST} ${SRC_TEST_CLOUD} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_CLOUD_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
			     				PUBLIC ${ARTIK_CONNECTIVITY_INCLUDE_DIR}
			     				PUBLIC ${CURL_INCLUDE_DIRS}
			   )

TARGET_LINK_LIBRARIES	( ${EXE_CLOUD_TEST} 
								${ARTIK_BASE_LIBRARIES}
								${ARTIK_CONNECTIVITY_LIBRARIES}						 
)

INSTALL ( TARGETS ${EXE_CLOUD_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
