CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( gpio-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikSystemio )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_GPIO_TEST gpio-test )

SET ( SRC_TEST_GPIO	artik_gpio_test.c
)

ADD_EXECUTABLE		( ${EXE_GPIO_TEST} ${SRC_TEST_GPIO} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_GPIO_TEST}
								PUBLIC ${LIB_INC}/base
								PUBLIC ${LIB_INC}/systemio
								PUBLIC ${GPIO_TEST_INC}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
			     				PUBLIC ${ARTIK_SYSTEMIO_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES	( ${EXE_GPIO_TEST}
								${ARTIK_BASE_LIBRARIES}
								${ARTIK_SYSTEMIO_LIBRARIES}
								${CMAKE_THREAD_LIBS_INIT}
)

INSTALL ( TARGETS ${EXE_GPIO_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
