CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( http-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikConnectivity )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_HTTP_TEST http-test )

SET ( SRC_TEST_HTTP	artik_http_test.c )

SET ( EXE_HTTP_OPENSSL_TEST http-openssl-test )

SET ( SRC_TEST_OPENSSL_HTTP	artik_http_openssl_test.c )

ADD_EXECUTABLE		( ${EXE_HTTP_TEST} ${SRC_TEST_HTTP} )

ADD_EXECUTABLE		( ${EXE_HTTP_OPENSSL_TEST} ${SRC_TEST_OPENSSL_HTTP} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_HTTP_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
			     				PUBLIC ${ARTIK_CONNECTIVITY_INCLUDE_DIR}
			     				PUBLIC ${CURL_INCLUDE_DIRS}
)

TARGET_LINK_LIBRARIES	( ${EXE_HTTP_TEST} 
								${ARTIK_BASE_LIBRARIES}
								${ARTIK_CONNECTIVITY_LIBRARIES}  
)

INSTALL ( TARGETS ${EXE_HTTP_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_HTTP_OPENSSL_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
			     				PUBLIC ${ARTIK_CONNECTIVITY_INCLUDE_DIR}
			     				PUBLIC ${CURL_INCLUDE_DIRS}
)

TARGET_LINK_LIBRARIES	( ${EXE_HTTP_OPENSSL_TEST} 
								${ARTIK_BASE_LIBRARIES}
								${ARTIK_CONNECTIVITY_LIBRARIES}  
)

INSTALL ( TARGETS ${EXE_HTTP_OPENSSL_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
