CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( i2c-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikSystemio )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_I2C_TEST i2c-test )

SET ( SRC_TEST_I2C artik_i2c_test.c )

ADD_EXECUTABLE		( ${EXE_I2C_TEST} ${SRC_TEST_I2C} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_I2C_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
			     				PUBLIC ${ARTIK_SYSTEMIO_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES	( ${EXE_I2C_TEST} 
								${ARTIK_BASE_LIBRARIES}
								${ARTIK_SYSTEMIO_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_I2C_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
