CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( layercpp-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikSystemio )
FIND_PACKAGE ( ArtikConnectivity )
FIND_PACKAGE ( ArtikSensor )
FIND_PACKAGE ( ArtikMqtt )

SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-parameter" )

SET ( EXE_SERIAL_TEST_CPP serialcpp-test )
SET ( EXE_GPIO_TEST_CPP gpiocpp-test )
SET ( EXE_PWM_TEST_CPP pwmcpp-test )
SET ( EXE_ADC_TEST_CPP adccpp-test )
SET ( EXE_TIME_TEST_CPP timecpp-test )
SET ( EXE_WEBSOCKET_TEST_CPP websocketcpp-test )
SET ( EXE_SENSOR_TEST_CPP sensorcpp-test )
SET ( EXE_CLOUD_TEST_CPP cloudcpp-test )
SET ( EXE_SECURITY_TEST_CPP securitycpp-test )
SET ( EXE_MQTTCLOUD_TEST_CPP mqttcloudcpp-test )

SET ( SRC_TEST_SERIAL artik_serial_test.cpp )
SET ( SRC_TEST_GPIO artik_gpio_test.cpp )
SET ( SRC_TEST_PWM artik_pwm_test.cpp )
SET ( SRC_TEST_ADC artik_adc_test.cpp )
SET ( SRC_TEST_TIME artik_time_test.cpp )
SET ( SRC_TEST_WEBSOCKET artik_websocket_test.cpp )
SET ( SRC_TEST_SENSOR artik_sensor_test.cpp )
SET ( SRC_TEST_CLOUD artik_cloud_test.cpp )
SET ( SRC_TEST_SECURITY artik_security_test.cpp )
SET ( SRC_TEST_MQTTCLOUD artik_mqttcloud_test.cpp )

ADD_EXECUTABLE		( ${EXE_SERIAL_TEST_CPP} ${SRC_TEST_SERIAL} )
ADD_EXECUTABLE		( ${EXE_GPIO_TEST_CPP} ${SRC_TEST_GPIO} )
ADD_EXECUTABLE		( ${EXE_PWM_TEST_CPP} ${SRC_TEST_PWM} )
ADD_EXECUTABLE		( ${EXE_ADC_TEST_CPP} ${SRC_TEST_ADC} )
ADD_EXECUTABLE		( ${EXE_TIME_TEST_CPP} ${SRC_TEST_TIME} )
ADD_EXECUTABLE		( ${EXE_WEBSOCKET_TEST_CPP} ${SRC_TEST_WEBSOCKET} )
ADD_EXECUTABLE		( ${EXE_SENSOR_TEST_CPP} ${SRC_TEST_SENSOR} )
ADD_EXECUTABLE		( ${EXE_CLOUD_TEST_CPP} ${SRC_TEST_CLOUD} )
ADD_EXECUTABLE		( ${EXE_SECURITY_TEST_CPP} ${SRC_TEST_SECURITY} )
ADD_EXECUTABLE		( ${EXE_MQTTCLOUD_TEST_CPP} ${SRC_TEST_MQTTCLOUD} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_SERIAL_TEST_CPP}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
                            PUBLIC ${ARTIK_BASE_INCLUDE_DIR}/cpp
                            PUBLIC ${ARTIK_SYSTEMIO_INCLUDE_DIR}
                            PUBLIC ${ARTIK_SYSTEMIO_INCLUDE_DIR}/cpp
)

TARGET_INCLUDE_DIRECTORIES ( ${EXE_GPIO_TEST_CPP}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
                            PUBLIC ${ARTIK_BASE_INCLUDE_DIR}/cpp
                            PUBLIC ${ARTIK_SYSTEMIO_INCLUDE_DIR}
                            PUBLIC ${ARTIK_SYSTEMIO_INCLUDE_DIR}/cpp
)

TARGET_INCLUDE_DIRECTORIES ( ${EXE_PWM_TEST_CPP}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
                            PUBLIC ${ARTIK_BASE_INCLUDE_DIR}/cpp
                            PUBLIC ${ARTIK_SYSTEMIO_INCLUDE_DIR}
                            PUBLIC ${ARTIK_SYSTEMIO_INCLUDE_DIR}/cpp
)

TARGET_INCLUDE_DIRECTORIES ( ${EXE_ADC_TEST_CPP}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
                            PUBLIC ${ARTIK_BASE_INCLUDE_DIR}/cpp
                            PUBLIC ${ARTIK_SYSTEMIO_INCLUDE_DIR}
                            PUBLIC ${ARTIK_SYSTEMIO_INCLUDE_DIR}/cpp
)

TARGET_INCLUDE_DIRECTORIES ( ${EXE_TIME_TEST_CPP}
			     PUBLIC ${LIB_INC}
 			     PUBLIC ${BINDS_CPP_INC}
 			   )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_WEBSOCKET_TEST_CPP}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
                            PUBLIC ${ARTIK_BASE_INCLUDE_DIR}/cpp
                            PUBLIC ${ARTIK_CONNECTIVITY_INCLUDE_DIR}
                            PUBLIC ${ARTIK_CONNECTIVITY_INCLUDE_DIR}/cpp
)

TARGET_INCLUDE_DIRECTORIES ( ${EXE_SENSOR_TEST_CPP}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
                            PUBLIC ${ARTIK_BASE_INCLUDE_DIR}/cpp
			     				PUBLIC ${ARTIK_SENSOR_INCLUDE_DIR}
			     				PUBLIC ${ARTIK_SENSOR_INCLUDE_DIR}/cpp
)

TARGET_INCLUDE_DIRECTORIES ( ${EXE_CLOUD_TEST_CPP}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
                            PUBLIC ${ARTIK_BASE_INCLUDE_DIR}/cpp
                            PUBLIC ${ARTIK_CONNECTIVITY_INCLUDE_DIR}
                            PUBLIC ${ARTIK_CONNECTIVITY_INCLUDE_DIR}/cpp
)

TARGET_INCLUDE_DIRECTORIES ( ${EXE_MQTTCLOUD_TEST_CPP}
			    PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
                            PUBLIC ${ARTIK_BASE_INCLUDE_DIR}/cpp
                            PUBLIC ${ARTIK_MQTT_INCLUDE_DIR}
                            PUBLIC ${ARTIK_MQTT_INCLUDE_DIR}/cpp
)

TARGET_LINK_LIBRARIES	( ${EXE_SERIAL_TEST_CPP}
								${ARTIK_SYSTEMIO_LIBRARIES}
								${ARTIK_BASE_LIBRARIES}
)
TARGET_LINK_LIBRARIES	( ${EXE_GPIO_TEST_CPP}
								${ARTIK_SYSTEMIO_LIBRARIES}
								${ARTIK_BASE_LIBRARIES}
)
TARGET_LINK_LIBRARIES	( ${EXE_PWM_TEST_CPP}
								${ARTIK_SYSTEMIO_LIBRARIES}
								${ARTIK_BASE_LIBRARIES}
)
TARGET_LINK_LIBRARIES	( ${EXE_ADC_TEST_CPP}
								${ARTIK_SYSTEMIO_LIBRARIES}
								${ARTIK_BASE_LIBRARIES}
)
TARGET_LINK_LIBRARIES	( ${EXE_TIME_TEST_CPP}
								${ARTIK_BASE_LIBRARIES}
)
TARGET_LINK_LIBRARIES	( ${EXE_WEBSOCKET_TEST_CPP}
								${ARTIK_CONNECTIVITY_LIBRARIES}
								${ARTIK_BASE_LIBRARIES}
)
TARGET_LINK_LIBRARIES	( ${EXE_SENSOR_TEST_CPP}
								${ARTIK_SENSOR_LIBRARIES}
								${ARTIK_BASE_LIBRARIES}
)
TARGET_LINK_LIBRARIES	( ${EXE_CLOUD_TEST_CPP}
								${ARTIK_CONNECTIVITY_LIBRARIES}
								${ARTIK_BASE_LIBRARIES}
)

TARGET_LINK_LIBRARIES	( ${EXE_SECURITY_TEST_CPP}
								${ARTIK_CONNECTIVITY_LIBRARIES}
								${ARTIK_BASE_LIBRARIES}
)

TARGET_LINK_LIBRARIES	( ${EXE_MQTTCLOUD_TEST_CPP}
								${ARTIK_MQTT_LIBRARIES}
								${ARTIK_BASE_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_SERIAL_TEST_CPP} RUNTIME DESTINATION lib/artik-sdk/tests/cpp )
INSTALL ( TARGETS ${EXE_GPIO_TEST_CPP} RUNTIME DESTINATION lib/artik-sdk/tests/cpp )
INSTALL ( TARGETS ${EXE_PWM_TEST_CPP} RUNTIME DESTINATION lib/artik-sdk/tests/cpp )
INSTALL ( TARGETS ${EXE_ADC_TEST_CPP} RUNTIME DESTINATION lib/artik-sdk/tests/cpp )
INSTALL ( TARGETS ${EXE_TIME_TEST_CPP} RUNTIME DESTINATION lib/artik-sdk/tests/cpp )
INSTALL ( TARGETS ${EXE_WEBSOCKET_TEST_CPP} RUNTIME DESTINATION lib/artik-sdk/tests/cpp )
INSTALL ( TARGETS ${EXE_SENSOR_TEST_CPP} RUNTIME DESTINATION lib/artik-sdk/tests/cpp )
INSTALL ( TARGETS ${EXE_CLOUD_TEST_CPP} RUNTIME DESTINATION lib/artik-sdk/tests/cpp )
INSTALL ( TARGETS ${EXE_SECURITY_TEST_CPP} RUNTIME DESTINATION lib/artik-sdk/tests/cpp )
INSTALL ( TARGETS ${EXE_MQTTCLOUD_TEST_CPP} RUNTIME DESTINATION lib/artik-sdk/tests/cpp )
