CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( loop-test )

FIND_PACKAGE ( ArtikBase )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_LOOP_TEST loop-test )

SET ( SRC_TEST_LOOP	artik_loop_test.c
    )

ADD_EXECUTABLE		( ${EXE_LOOP_TEST} ${SRC_TEST_LOOP} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_LOOP_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
			     				PUBLIC ${CURL_INCLUDE_DIRS}
			   )

TARGET_LINK_LIBRARIES	( ${EXE_LOOP_TEST}  
								${ARTIK_BASE_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_LOOP_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
