CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT			( lwm2m-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikLwm2m )

SET ( EXE_LWM2M_TEST lwm2m-test )

SET ( SRC_TEST_LWM2M
	artik_lwm2m_test_client.c
	artik_lwm2m_test_common.c
)

ADD_EXECUTABLE		( ${EXE_LWM2M_TEST} ${SRC_TEST_LWM2M} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_LWM2M_TEST}
	PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
	PUBLIC ${ARTIK_LWM2M_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES	( ${EXE_LWM2M_TEST}
	${ARTIK_BASE_LIBRARIES}
	${ARTIK_LWM2M_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_LWM2M_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
