CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( media-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikMedia )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_MEDIA_TEST media-test )

SET ( SRC_TEST_MEDIA artik_media_test.c )

ADD_EXECUTABLE		( ${EXE_MEDIA_TEST} ${SRC_TEST_MEDIA} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_MEDIA_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
			     				PUBLIC ${ARTIK_MEDIA_INCLUDE_DIR}
			   )

TARGET_LINK_LIBRARIES	( ${EXE_MEDIA_TEST} 
								${ARTIK_BASE_LIBRARIES}
								${ARTIK_MEDIA_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_MEDIA_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
