CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( module-test )

FIND_PACKAGE ( ArtikBase )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_ARCH_TEST module-test )

SET ( SRC_TEST_ARCH	artik_module_test.c
    )

ADD_EXECUTABLE		( ${EXE_ARCH_TEST} ${SRC_TEST_ARCH} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_ARCH_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
								PUBLIC ${ARCH_TEST_INC}
)

TARGET_LINK_LIBRARIES	( ${EXE_ARCH_TEST}  
								${ARTIK_BASE_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_ARCH_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
