CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( mqtt-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikMqtt )
FIND_PACKAGE ( Mosquitto )

SET ( EXE_MQTT_SUB_TEST mqtt_sub_test )

SET ( EXE_MQTT_PUB_TEST mqtt_pub_test )

SET ( EXE_MQTT_CLOUD_TEST mqtt_cloud_test )

SET ( SRC_TEST_MQTT_SUB	artik_mqtt_sub_test.c )

SET ( SRC_TEST_MQTT_PUB artik_mqtt_pub_test.c)

SET ( SRC_TEST_MQTT_CLOUD artik_mqtt_cloud_test.c)

ADD_EXECUTABLE		( ${EXE_MQTT_SUB_TEST} ${SRC_TEST_MQTT_SUB} )

ADD_EXECUTABLE		( ${EXE_MQTT_PUB_TEST} ${SRC_TEST_MQTT_PUB} )

ADD_EXECUTABLE		( ${EXE_MQTT_CLOUD_TEST} ${SRC_TEST_MQTT_CLOUD} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_MQTT_SUB_TEST}
			     PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
			     PUBLIC ${ARTIK_MQTT_INCLUDE_DIR}
			   )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_MQTT_PUB_TEST}
			     PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
			     PUBLIC ${ARTIK_MQTT_INCLUDE_DIR}
			   )
			   
TARGET_INCLUDE_DIRECTORIES ( ${EXE_MQTT_CLOUD_TEST}
			     PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
			     PUBLIC ${ARTIK_MQTT_INCLUDE_DIR}
			   )

TARGET_LINK_LIBRARIES (${EXE_MQTT_SUB_TEST}
			${ARTIK_BASE_LIBRARIES}
			${LIBMOSQUITTO_LIBRARIES}
			${ARTIK_MQTT_LIBRARIES})

TARGET_LINK_LIBRARIES (${EXE_MQTT_PUB_TEST}
			${ARTIK_BASE_LIBRARIES}
			${LIBMOSQUITTO_LIBRARIES}
			${ARTIK_MQTT_LIBRARIES})
			
TARGET_LINK_LIBRARIES (${EXE_MQTT_CLOUD_TEST}
			${ARTIK_BASE_LIBRARIES}
			${LIBMOSQUITTO_LIBRARIES}
			${ARTIK_MQTT_LIBRARIES})

INSTALL ( TARGETS ${EXE_MQTT_SUB_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )

INSTALL ( TARGETS ${EXE_MQTT_PUB_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )

INSTALL ( TARGETS ${EXE_MQTT_CLOUD_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
