CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( network-test )

SET ( EXE_NETWORK_TEST network-test )

SET ( EXE_DHCP_CLIENT_TEST network-dhcp-client-test )

SET ( EXE_DHCP_SERVER_TEST network-dhcp-server-test )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( SRC_TEST_NETWORK	artik_network_test.c
    )

SET ( SRC_DHCP_CLIENT_NETWORK	artik_dhcp_client_test.c
    )

SEt ( SRC_DHCP_SERVER_NETWORK   artik_dhcp_server_test.c
    )

ADD_EXECUTABLE		( ${EXE_NETWORK_TEST} ${SRC_TEST_NETWORK} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_NETWORK_TEST}
			     PUBLIC ${LIB_INC}/base
			     PUBLIC ${LIB_INC}/connectivity
			     PUBLIC ${CURL_INCLUDE_DIRS}
			   )

TARGET_LINK_LIBRARIES	( ${EXE_NETWORK_TEST} ${LIB_BASE} ${LIB_CONNECTIVITY} )

INSTALL ( TARGETS ${EXE_NETWORK_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )

ADD_EXECUTABLE		( ${EXE_DHCP_CLIENT_TEST} ${SRC_DHCP_CLIENT_NETWORK} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_DHCP_CLIENT_TEST}
			     PUBLIC ${LIB_INC}/base
			     PUBLIC ${LIB_INC}/connectivity
			   )

TARGET_LINK_LIBRARIES	( ${EXE_DHCP_CLIENT_TEST} ${LIB_BASE} ${LIB_CONNECTIVITY} )

INSTALL ( TARGETS ${EXE_DHCP_CLIENT_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )

ADD_EXECUTABLE		( ${EXE_DHCP_SERVER_TEST} ${SRC_DHCP_SERVER_NETWORK} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_DHCP_SERVER_TEST}
			     PUBLIC ${LIB_INC}/base
			     PUBLIC ${LIB_INC}/connectivity
			   )

TARGET_LINK_LIBRARIES	( ${EXE_DHCP_SERVER_TEST} ${LIB_BASE} ${LIB_CONNECTIVITY} )

INSTALL ( TARGETS ${EXE_DHCP_SERVER_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )

