CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( sdr-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikConnectivity )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_SDR_TEST sdr-test )

SET ( SRC_TEST_SDR	artik_sdr_test.c
    )

ADD_EXECUTABLE		( ${EXE_SDR_TEST} ${SRC_TEST_SDR} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_SDR_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
								PUBLIC ${ARTIK_CONNECTIVITY_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES	( ${EXE_SDR_TEST}
								${ARTIK_BASE_LIBRARIES}
								${ARTIK_CONNECTIVITY_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_SDR_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
