CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( security-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikConnectivity )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_SECURITY_TEST security-test )
SET ( EXE_PKCS7_SIG_VERIFY pkcs7-sig-verify )

SET ( SRC_TEST_SECURITY	artik_security_test.c )
SET ( SRC_PKCS7_SIG_VERIFY pkcs7_sig_verify.c )

ADD_EXECUTABLE		( ${EXE_SECURITY_TEST} ${SRC_TEST_SECURITY} )
ADD_EXECUTABLE		( ${EXE_PKCS7_SIG_VERIFY} ${SRC_PKCS7_SIG_VERIFY} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_SECURITY_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
								PUBLIC ${ARTIK_CONNECTIVITY_INCLUDE_DIR}
)

TARGET_INCLUDE_DIRECTORIES ( ${EXE_PKCS7_SIG_VERIFY}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
								PUBLIC ${ARTIK_CONNECTIVITY_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES	( ${EXE_SECURITY_TEST}
								${ARTIK_BASE_LIBRARIES}
								${ARTIK_CONNECTIVITY_LIBRARIES}
)

TARGET_LINK_LIBRARIES	( ${EXE_PKCS7_SIG_VERIFY}
								${ARTIK_BASE_LIBRARIES}
								${ARTIK_CONNECTIVITY_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_SECURITY_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
INSTALL ( TARGETS ${EXE_PKCS7_SIG_VERIFY} RUNTIME DESTINATION lib/artik-sdk/tests )
