CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( sensor-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikSensor )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_SENSOR_TEST sensor-test )

SET ( SRC_TEST_SENSOR	artik_sensor_test.c
    )

ADD_EXECUTABLE		( ${EXE_SENSOR_TEST} ${SRC_TEST_SENSOR} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_SENSOR_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
			     				PUBLIC ${ARTIK_SENSOR_INCLUDE_DIR}
			   )

TARGET_LINK_LIBRARIES	( ${EXE_SENSOR_TEST}
								${ARTIK_BASE_LIBRARIES}
								${ARTIK_SENSOR_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_SENSOR_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
