CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( serial-test )

FIND_PACKAGE ( Threads )
FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikSystemio )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_SERIAL_TEST serial-test )

SET ( SRC_TEST_SERIAL	artik_serial_test.c
    )

ADD_EXECUTABLE		( ${EXE_SERIAL_TEST} ${SRC_TEST_SERIAL} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_SERIAL_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
			     				PUBLIC ${ARTIK_SYSTEMIO_INCLUDE_DIR}
			   )

TARGET_LINK_LIBRARIES	( ${EXE_SERIAL_TEST} 
								${ARTIK_BASE_LIBRARIES}
								${ARTIK_SYSTEMIO_LIBRARIES}
								${CMAKE_THREAD_LIBS_INIT} 
)

INSTALL ( TARGETS ${EXE_SERIAL_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
