CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( spi-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikSystemio )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_SPI_TEST spi-test )

SET ( SRC_TEST_SPI artik_spi_test.c )

ADD_EXECUTABLE		( ${EXE_SPI_TEST} ${SRC_TEST_SPI} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_SPI_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
			     				PUBLIC ${ARTIK_SYSTEMIO_INCLUDE_DIR}
			     				PUBLIC ${SPI_TEST_INC}
)

TARGET_LINK_LIBRARIES	( ${EXE_SPI_TEST}
								${ARTIK_BASE_LIBRARIES}
								${ARTIK_SYSTEMIO_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_SPI_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
