CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( zigbee-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikZigbee )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter -Wno-empty-body" )

SET ( EXE_ZIGBEE_TEST zigbee-test )
SET ( EXE_ZIGBEE_CLI zigbee-cli )

SET ( SRC_TEST_ZIGBEE	artik_zigbee_test.c
						artik_zigbee_test_common.c
)
SET ( SRC_ZIGBEE_CLI	artik_zigbee_cli.c
)

ADD_EXECUTABLE		( ${EXE_ZIGBEE_TEST} ${SRC_TEST_ZIGBEE} )
ADD_EXECUTABLE		( ${EXE_ZIGBEE_CLI} ${SRC_ZIGBEE_CLI} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_ZIGBEE_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
								PUBLIC ${ARTIK_ZIGBEE_INCLUDE_DIR}
)
TARGET_INCLUDE_DIRECTORIES ( ${EXE_ZIGBEE_CLI}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
								PUBLIC ${ARTIK_ZIGBEE_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES	( ${EXE_ZIGBEE_TEST}
								${ARTIK_ZIGBEE_LIBRARIES}
								${ARTIK_BASE_LIBRARIES}
)
TARGET_LINK_LIBRARIES	( ${EXE_ZIGBEE_CLI}
								${ARTIK_ZIGBEE_LIBRARIES}
								${ARTIK_BASE_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_ZIGBEE_TEST} RUNTIME DESTINATION lib/artik-sdk/tests )
INSTALL ( TARGETS ${EXE_ZIGBEE_CLI} RUNTIME DESTINATION lib/artik-sdk/tests )