CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT			( artik-api-lwm2m C )

FIND_PACKAGE ( Wakaama )

SET ( LIB_LWM2M artik-sdk-lwm2m CACHE INTERNAL "" FORCE )
SET ( ARTIK_LWM2M_INCLUDE_DIR ${LIB_INC}/lwm2m CACHE INTERNAL "" FORCE )
SET ( ARTIK_LWM2M_LIBRARIES ${LIB_LWM2M} CACHE INTERNAL "" FORCE )

SET ( SRC_LWM2M
	artik_lwm2m.c
	linux_lwm2m.c
	cpp/artik_lwm2m.cpp
)

INCLUDE_DIRECTORIES ( ${CMAKE_CURRENT_SOURCE_DIR} linux )

ADD_LIBRARY ( ${LIB_LWM2M} SHARED ${SRC_LWM2M} )

TARGET_LINK_LIBRARIES ( ${LIB_LWM2M} ${LIB_BASE} ${LIBWAKAAMA_LIBRARIES})

TARGET_INCLUDE_DIRECTORIES ( ${LIB_LWM2M} PUBLIC
	${ARTIK_BASE_INCLUDE_DIR}
	${ARTIK_BASE_INCLUDE_DIR}/cpp
	${ARTIK_LWM2M_INCLUDE_DIR}
	${ARTIK_LWM2M_INCLUDE_DIR}/cpp
	${LIBWAKAAMA_INCLUDE_DIR}
	${OPENSSL_INCLUDE_DIR}
)

SET_TARGET_PROPERTIES ( ${LIB_LWM2M} PROPERTIES VERSION ${LIB_VERSION_MAJOR}.${LIB_VERSION_MINOR}.${LIB_VERSION_PATCH} SOVERSION ${LIB_VERSION_MAJOR} OUTPUT_NAME ${LIB_LWM2M})

INSTALL ( TARGETS ${LIB_LWM2M} LIBRARY DESTINATION lib )
FILE ( GLOB LWM2M_HEADERS "${LIB_INC}/lwm2m/*.h" )
FILE ( GLOB LWM2M_HEADERS_CPP "${LIB_INC}/lwm2m/cpp/*.hh" )
INSTALL ( FILES ${LWM2M_HEADERS} DESTINATION include/artik/lwm2m )
INSTALL ( FILES ${LWM2M_HEADERS_CPP} DESTINATION include/artik/lwm2m/cpp )